--- a/scss/components/_autocomplete.scss
+++ b/scss/components/_autocomplete.scss
@@ -6,7 +6,7 @@ body {
 .autocomplete {
   /*the container must be positioned relative:*/
   position: relative;
-  display: inline-block;
+  // inline-block;
 }
 input {
   border: 1px solid transparent;
